fix: prevent overflow-x when dropzones expand

--- a/src/styles/components/_editor.scss
+++ b/src/styles/components/_editor.scss
@@ -13,6 +13,7 @@
     inset 10px 10px 20px 0 rgba($color_shadow_dark, 0.2);
   transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow-y: auto;
+  overflow-x: hidden;
   .text-placeholder {
     height: 100%;
     display: flex;
